--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,11 @@
     /* Linting */
     "strict": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": false,
     "noUnusedLocals": true,
 
     "baseUrl": "./",
     "paths": {
-      "~/*": ["src/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["src"],
