--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .tsx,.ts,.js,.jsx src/",
     "preview": "vite preview",
     "prepare": "husky install",
-    "completed": "echo '\\033[4;32m♡ 'Completed checking ♡' \\033[0m'"
+    "completed": "echo '\\033[4;32m♡ 'Completed checking ♡' \\033[0m'",
+    "generate-router": "tsr generate"
   },
   "dependencies": {
     "@codemirror/lang-java": "^6.0.1",
@@ -18,6 +19,15 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@tanstack/react-query": "^5.17.1",
+    "@tanstack/react-router": "^1.0.0",
+    "@tanstack/router-cli": "^1.0.0",
+    "@tanstack/router-vite-plugin": "^1.8.2",
+    "@tiptap/core": "^2.1.13",
+    "@tiptap/extension-underline": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "@types/uuid": "^9.0.7",
     "@uiw/react-codemirror": "^4.21.21",
     "@uiw/react-split": "^5.9.1",
@@ -26,8 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.20.0",
+    "react-resizable-panels": "^1.0.5",
     "tailwind-merge": "^2.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
