--- a/package.json
+++ b/package.json
@@ -15,59 +15,64 @@
   "dependencies": {
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.1",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
-    "@tanstack/react-query": "^5.17.1",
-    "@tanstack/react-router": "^1.0.0",
-    "@tanstack/router-cli": "^1.0.0",
-    "@tanstack/router-vite-plugin": "^1.8.2",
     "@tiptap/core": "^2.1.13",
     "@tiptap/extension-underline": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
-    "@types/uuid": "^9.0.7",
-    "@uiw/react-codemirror": "^4.21.21",
-    "@uiw/react-split": "^5.9.1",
-    "classnames": "^2.3.2",
+    "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.19.4",
+    "@tanstack/react-query": "^5.22.2",
+    "@tanstack/react-router": "^1.16.6",
+    "@tanstack/router-vite-plugin": "^1.16.5",
+    "@types/uuid": "^9.0.8",
+    "@uiw/react-codemirror": "^4.21.22",
+    "@uiw/react-split": "^5.9.3",
+    "axios": "^1.6.7",
+    "classnames": "^2.5.1",
     "codemirror": "^6.0.1",
+    "material-react-table": "^2.11.3",
+    "material-ui-popup-state": "^5.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
     "react-resizable-panels": "^1.0.5",
-    "tailwind-merge": "^2.0.0",
+    "react-hook-form": "^7.50.1",
+    "react-query": "^3.39.3",
+    "tailwind-merge": "^2.2.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-tailwindcss": "^3.14.2",
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.1.0",
-    "postcss": "^8.4.31",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
     "prettier": "3.1.0",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.0"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.3",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
