edit file workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: wisdomwork/ecode-admin:latest
+          tags: wisdomwork/ecode:latest
