WW-122: build UI create code exercise

--- a/tsr.config.json
+++ b/tsr.config.json
@@ -1,5 +1,5 @@
 {
-  "routeFileIgnorePrefix": "@",
+  "routeFilePrefix": "~",
   "routesDirectory": "./src/pages/",
   "generatedRouteTree": "./src/generated/routeTree.gen.ts"
 }
