--- a/package.json
+++ b/package.json
@@ -10,18 +10,14 @@
     "preview": "vite preview",
     "prepare": "husky install",
     "completed": "echo '\\033[4;32m♡ 'Completed checking ♡' \\033[0m'",
-    "generate-router": "tsr generate"
+    "generate-router": "tsr generate",
+    "generate-schema": "pnpm dlx  openapi-typescript http://localhost:8080/v3/api-docs --output ./src/generated/schema.d.ts"
   },
   "dependencies": {
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@tiptap/core": "^2.1.13",
-    "@tiptap/extension-underline": "^2.1.13",
-    "@tiptap/pm": "^2.1.13",
-    "@tiptap/react": "^2.1.13",
-    "@tiptap/starter-kit": "^2.1.13",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
@@ -29,6 +25,11 @@
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-router": "^1.16.6",
     "@tanstack/router-vite-plugin": "^1.16.5",
+    "@tiptap/core": "^2.1.13",
+    "@tiptap/extension-underline": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "@types/uuid": "^9.0.8",
     "@uiw/react-codemirror": "^4.21.22",
     "@uiw/react-split": "^5.9.3",
@@ -39,9 +40,9 @@
     "material-ui-popup-state": "^5.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-resizable-panels": "^1.0.5",
     "react-hook-form": "^7.50.1",
     "react-query": "^3.39.3",
+    "react-resizable-panels": "^1.0.5",
     "tailwind-merge": "^2.2.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
@@ -67,6 +68,7 @@
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
+    "openapi-typescript": "^6.7.4",
     "postcss": "^8.4.35",
     "prettier": "3.1.0",
     "tailwindcss": "^3.4.1",
