--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "codemirror": "^6.0.1",
     "material-react-table": "^2.11.3",
     "material-ui-popup-state": "^5.0.10",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -48,6 +49,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
