--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prepare": "husky install",
     "completed": "echo '\\033[4;32m♡ 'Completed checking ♡' \\033[0m'",
     "generate-router": "tsr generate",
-    "generate-schema": "pnpm dlx  openapi-typescript http://localhost:8080/v3/api-docs --output ./src/generated/schema.d.ts"
+    "generate-schema": "pnpm dlx  openapi-typescript http://localhost:8080/v3/api-docs --output ./src/generated/schema.d.ts",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@codemirror/lang-java": "^6.0.1",
@@ -36,6 +38,7 @@
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "codemirror": "^6.0.1",
+    "date-fns": "^3.3.1",
     "material-react-table": "^2.11.3",
     "material-ui-popup-state": "^5.0.10",
     "notistack": "^3.0.1",
@@ -46,7 +49,9 @@
     "react-resizable-panels": "^1.0.5",
     "tailwind-merge": "^2.2.1",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "vitest": "^1.3.1",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
@@ -56,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitest/coverage-v8": "^1.3.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
