--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     platform: linux/x86_64
     ports:
       - '4000:4000'
+    expose:
+      - '4000'
     restart: always
     env_file:
       - .env
