--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   app:
     image: wisdomwork/ecode:latest
-    platform: linux/x86_64
+    platform: linux/amd64
     ports:
       - '4000:4000'
     expose:
