--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,10 @@ services:
     platform: linux/amd64
     ports:
       - '4000:4000'
-    expose:
-      - '4000'
     restart: always
     env_file:
       - .env
     environment:
       - VITE_API_URL=${VITE_API_URL}
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
