--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "@types/js-cookie": "^3.0.6",
     "@types/uuid": "^9.0.8",
     "@uiw/react-codemirror": "^4.21.22",
     "@uiw/react-split": "^5.9.3",
@@ -39,13 +40,13 @@
     "classnames": "^2.5.1",
     "codemirror": "^6.0.1",
     "date-fns": "^3.3.1",
+    "js-cookie": "^3.0.5",
     "material-react-table": "^2.11.3",
     "material-ui-popup-state": "^5.0.10",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
-    "react-query": "^3.39.3",
     "react-resizable-panels": "^1.0.5",
     "tailwind-merge": "^2.2.1",
     "uuid": "^9.0.1",
