--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.0",
     "@types/uuid": "^9.0.8",
     "@uiw/react-codemirror": "^4.21.22",
     "@uiw/react-split": "^5.9.3",
@@ -41,6 +42,7 @@
     "codemirror": "^6.0.1",
     "date-fns": "^3.3.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "material-react-table": "^2.11.3",
     "material-ui-popup-state": "^5.0.10",
     "notistack": "^3.0.1",
