--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.15.0",
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.1",
     "@codesandbox/sandpack-react": "^2.13.5",
+    "@codesandbox/sandpack-themes": "^2.0.21",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
@@ -51,6 +53,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^1.0.5",
+    "sandpack-file-explorer": "^0.0.7",
     "tailwind-merge": "^2.2.1",
     "uuid": "^9.0.1",
     "vitest": "^1.3.1",
