--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@uiw/react-codemirror": "^4.21.22",
     "@uiw/react-split": "^5.9.3",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "classnames": "^2.5.1",
     "codemirror": "^6.0.1",
     "date-fns": "^3.3.1",
@@ -50,6 +51,7 @@
     "material-ui-popup-state": "^5.0.10",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^1.0.5",
