--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: ci
 on:
   push:
     branches:
-      - dev
+      - main
 
 jobs:
   build:
@@ -39,4 +39,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: wisdomwork/ecode:latest
+          tags: wisdomwork/ecode:0.1
